--- a/prod/docker-compose.yml
+++ b/prod/docker-compose.yml
@@ -1,4 +1,34 @@
 services:
+  accountsdb:
+    container_name: accountsdb
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_DATABASE: "accountsdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  loansdb:
+    container_name: loansdb
+    ports:
+      - "3307:3306"
+    environment:
+      MYSQL_DATABASE: "loansdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
+  cardsdb:
+    container_name: cardsdb
+    ports:
+      - "3308:3306"
+    environment:
+      MYSQL_DATABASE: "cardsdb"
+    extends:
+      file: common-config.yml
+      service: microservice-db-config
+
   rabbit:
     image: rabbitmq:3.12-management
     hostname: rabbitmq
@@ -16,7 +46,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "devskillslearning/configserver:v2.0"
+    image: "devskillslearning/configserver:v3.0"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -34,43 +64,52 @@ services:
       service: microservice-base-config
 
   accounts:
-    image: "devskillslearning/accounts:v2.0"
+    image: "devskillslearning/accounts:v3.0"
     container_name: accounts-ms
     ports:
       - "8080:8080"
     depends_on:
       configserver:
         condition: service_healthy
+      accountsdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb?useSSL=false&allowPublicKeyRetrieval=true"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
   loans:
-    image: "devskillslearning/loans:v2.0"
+    image: "devskillslearning/loans:v3.0"
     container_name: loans-ms
     ports:
       - "8090:8090"
     depends_on:
       configserver:
         condition: service_healthy
+      loansdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb?useSSL=false&allowPublicKeyRetrieval=true"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
   cards:
-    image: "devskillslearning/cards:v2.0"
+    image: "devskillslearning/cards:v3.0"
     container_name: cards-ms
     ports:
       - "9000:9000"
     depends_on:
       configserver:
         condition: service_healthy
+      cardsdb:
+        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
+      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb?useSSL=false&allowPublicKeyRetrieval=true"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
