--- a/qa/docker-compose.yml
+++ b/qa/docker-compose.yml
@@ -1,33 +1,33 @@
 services:
-  accountsdb:
-    container_name: accountsdb
-    ports:
-      - "3306:3306"
-    environment:
-      MYSQL_DATABASE: "accountsdb"
-    extends:
-      file: common-config.yml
-      service: microservice-db-config
-
-  loansdb:
-    container_name: loansdb
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_DATABASE: "loansdb"
-    extends:
-      file: common-config.yml
-      service: microservice-db-config
-
-  cardsdb:
-    container_name: cardsdb
-    ports:
-      - "3308:3306"
-    environment:
-      MYSQL_DATABASE: "cardsdb"
-    extends:
-      file: common-config.yml
-      service: microservice-db-config
+  #  accountsdb:
+  #    container_name: accountsdb
+  #    ports:
+  #      - "3306:3306"
+  #    environment:
+  #      MYSQL_DATABASE: "accountsdb"
+  #    extends:
+  #      file: common-config.yml
+  #      service: microservice-db-config
+  #
+  #  loansdb:
+  #    container_name: loansdb
+  #    ports:
+  #      - "3307:3306"
+  #    environment:
+  #      MYSQL_DATABASE: "loansdb"
+  #    extends:
+  #      file: common-config.yml
+  #      service: microservice-db-config
+  #
+  #  cardsdb:
+  #    container_name: cardsdb
+  #    ports:
+  #      - "3308:3306"
+  #    environment:
+  #      MYSQL_DATABASE: "cardsdb"
+  #    extends:
+  #      file: common-config.yml
+  #      service: microservice-db-config
 
   rabbit:
     image: rabbitmq:3.12-management
@@ -46,7 +46,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "devskillslearning/configserver:v3.0"
+    image: "devskillslearning/configserver:v4.0"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -63,53 +63,79 @@ services:
       file: common-config.yml
       service: microservice-base-config
 
+  eurekaserver:
+    image: "devskillslearning/eurekaserver:v4.0"
+    container_name: eurekaserver-ms
+    ports:
+      - "8070:8070"
+    depends_on:
+      configserver:
+        condition: service_healthy
+    environment:
+      SPRING_APPLICATION_NAME: "eurekaserver"
+    healthcheck:
+      test: "curl --fail --silent localhost:8070/actuator/health/readiness | grep UP || exit 1"
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+    extends:
+      file: common-config.yml
+      service: microservice-base-config
+
   accounts:
-    image: "devskillslearning/accounts:v3.0"
+    image: "devskillslearning/accounts:v4.0"
     container_name: accounts-ms
     ports:
       - "8080:8080"
     depends_on:
       configserver:
         condition: service_healthy
-      accountsdb:
+      eurekaserver:
         condition: service_healthy
+    #      accountsdb:
+    #        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "accounts"
-      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb?useSSL=false&allowPublicKeyRetrieval=true"
+    #      SPRING_DATASOURCE_URL: "jdbc:mysql://accountsdb:3306/accountsdb?useSSL=false&allowPublicKeyRetrieval=true"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
   loans:
-    image: "devskillslearning/loans:v3.0"
+    image: "devskillslearning/loans:v4.0"
     container_name: loans-ms
     ports:
       - "8090:8090"
     depends_on:
       configserver:
         condition: service_healthy
-      loansdb:
+      eurekaserver:
         condition: service_healthy
+    #      loansdb:
+    #        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "loans"
-      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb?useSSL=false&allowPublicKeyRetrieval=true"
+    #      SPRING_DATASOURCE_URL: "jdbc:mysql://loansdb:3306/loansdb?useSSL=false&allowPublicKeyRetrieval=true"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
 
   cards:
-    image: "devskillslearning/cards:v3.0"
+    image: "devskillslearning/cards:v4.0"
     container_name: cards-ms
     ports:
       - "9000:9000"
     depends_on:
       configserver:
         condition: service_healthy
-      cardsdb:
+      eurekaserver:
         condition: service_healthy
+    #      cardsdb:
+    #        condition: service_healthy
     environment:
       SPRING_APPLICATION_NAME: "cards"
-      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb?useSSL=false&allowPublicKeyRetrieval=true"
+    #      SPRING_DATASOURCE_URL: "jdbc:mysql://cardsdb:3306/cardsdb?useSSL=false&allowPublicKeyRetrieval=true"
     extends:
       file: common-config.yml
       service: microservice-configserver-config
