--- a/qa/common-config.yml
+++ b/qa/common-config.yml
@@ -10,6 +10,10 @@ services:
       resources:
         limits:
           memory: 700m
+    environment:
+      JAVA_TOOLS_OPTIONS: "-javaagent:/app/libs/opentelemetry-javaagent-1.27.0.jar"
+      OTEL_EXPORTER_OTLP_ENDPOINT: http://tempo:4317
+      OTEL_METRICS_EXPORTER: none
 
   microservice-configserver-config:
     extends:
@@ -18,7 +22,7 @@ services:
       configserver:
         condition: service_healthy
     environment:
-      SPRING_PROFILES_ACTIVE: default
+      SPRING_PROFILES_ACTIVE: qa
       SPRING_CONFIG_IMPORT: configserver:http://configserver:8071/
 
   microservice-eureka-config:
