--- a/prod/docker-compose.yml
+++ b/prod/docker-compose.yml
@@ -1,4 +1,26 @@
 services:
+
+  kafka:
+    image: docker.io/bitnami/kafka:3.5
+    ports:
+      - "9092:9092"
+    volumes:
+      - "kafka_data:/bitnami"
+    environment:
+      # KRaft settings
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      # Listeners
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   keycloak:
     image: quay.io/keycloak/keycloak:22.0.1
     container_name: keycloak
@@ -212,7 +234,7 @@ services:
       service: network-deploy-service
 
   configserver:
-    image: "devskillslearning/configserver:v7.0"
+    image: "devskillslearning/configserver:v8.0"
     container_name: configserver-ms
     ports:
       - "8071:8071"
@@ -229,7 +251,7 @@ services:
       OTEL_SERVICE_NAME: "configserver"
 
   eurekaserver:
-    image: "devskillslearning/eurekaserver:v7.0"
+    image: "devskillslearning/eurekaserver:v8.0"
     container_name: eurekaserver-ms
     ports:
       - "8070:8070"
@@ -247,7 +269,7 @@ services:
       OTEL_SERVICE_NAME: "eurekaserver"
 
   accounts:
-    image: "devskillslearning/accounts:v7.0"
+    image: "devskillslearning/accounts:v8.0"
     container_name: accounts-ms
     healthcheck:
       test: "curl --fail --silent localhost:8080/actuator/health/readiness | grep UP || exit 1"
@@ -258,12 +280,13 @@ services:
     environment:
       SPRING_APPLICATION_NAME: "accounts"
       OTEL_SERVICE_NAME: "accounts"
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
     extends:
       file: common-config.yml
       service: microservice-eureka-config
 
   loans:
-    image: "devskillslearning/loans:v7.0"
+    image: "devskillslearning/loans:v8.0"
     container_name: loans-ms
     healthcheck:
       test: "curl --fail --silent localhost:8090/actuator/health/readiness | grep UP || exit 1"
@@ -279,7 +302,7 @@ services:
       service: microservice-eureka-config
 
   cards:
-    image: "devskillslearning/cards:v7.0"
+    image: "devskillslearning/cards:v8.0"
     container_name: cards-ms
     healthcheck:
       test: "curl --fail --silent localhost:9000/actuator/health/readiness | grep UP || exit 1"
@@ -294,8 +317,17 @@ services:
       file: common-config.yml
       service: microservice-eureka-config
 
+  message:
+    image: "devskillslearning/message:v8.0"
+    container_name: message-ms
+    environment:
+      SPRING_CLOUD_STREAM_KAFKA_BINDER_BROKERS: "kafka:9092"
+    extends:
+      file: common-config.yml
+      service: network-deploy-service
+
   gatewayserver:
-    image: "devskillslearning/gatewayserver:v7.0"
+    image: "devskillslearning/gatewayserver:v8.0"
     container_name: gatewayserver-ms
     ports:
       - "8072:8072"
@@ -313,6 +345,10 @@ services:
     extends:
       file: common-config.yml
       service: microservice-eureka-config
+
+volumes:
+  kafka_data:
+    driver: local
 
 networks:
   devskillslearning:
